<resources>
    <string name="app_name">Water App</string>
    <string name="login_desc">Enter your login details below to begin.</string>
    <string name="welcome_text">Welcome</string>
    <string name="username_text">Username</string>
    <string name="password_label">Password</string>
    <string name="login_text">Login</string>
    <string name="Powered_by_i4africa">Powered by <b>i4africa</b></string>
    <string name="clients_label">Clients</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_location">Location</string>
    <string name="inputPeriod">inputPeriod</string>
    <string name="title_activity_steri_sterilization_tower">SteriSterilizationTower</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="desc_wpmsa_logo_for_the_water_app">WPMSA Logo for the Water App</string>
    <string name="lbl_configuration_output_start_text">Configuration Output:</string>
</resources>